# neo-agent-knowledge

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE  Neo_Spec_v0.3.md  Neo_Spec_v0.4.md  README.md  SECURITY.md  SPARK_RESOLUTION_SPEC.md  SPEC.md  alembic.ini  neo-architecture.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  colors.ts  index.css  types.ts
frontend/src/components/: FilterBar.tsx  Graph.tsx  NodePanel.tsx  SparkPanel.tsx  TreeView.tsx
migrations/: env.py
src/neo/: config.py  db.py  enums.py  models.py  runtime.py
src/neo/cli/: main.py
src/neo/core/: api.py  assembler.py  consolidation.py  contemplation.py  discovery.py  discovery_scheduler.py  llm.py  relationships.py  resolution_scheduler.py  resolver.py  scheduler.py  sparks.py  web_search.py  youtube.py
src/neo/embedding/: client.py
src/neo/mcp/: server.py
src/neo/rest/: app.py  routes.py  schemas.py
src/neo/static/: index.html
src/neo/static/assets/: index-Bmxk1T_t.js  index-CHy1i2Jy.js  index-DKnAyKcC.js  index-nrN8-rcn.css
src/neo/store/: __init__.py  interface.py  postgres.py  sqlite.py
tests/: conftest.py  test_api.py  test_assembler.py  test_config.py  test_consolidation.py  test_llm_client.py  test_mcp_http.py  test_mcp_server.py  test_models.py  test_relationships.py  test_rest.py  test_scheduler.py  test_source_ingestion.py  test_spark_resolution_pipeline.py  test_sparks.py  test_store_interface.py
