[project]
name = "neo-agent-knowledge"
version = "0.1.1"
description = "Semantic memory system for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Dallas Rose"},
]
keywords = [
    "ai-agents",
    "knowledge-graph",
    "mcp",
    "memory",
    "semantic-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "croniter>=6.0",
    "fastmcp>=2.0",
    "fastapi[standard]>=0.115",
    "httpx>=0.27",
    "click>=8.1",
    "openai>=1.30",
    "anthropic>=0.49",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
# Compatibility extras from earlier alpha installs. These capabilities are now
# included by default so a plain install has working embeddings, cloud LLMs, and
# YouTube transcript ingestion.
embeddings = [
    "openai>=1.30",
]
sparks = [
    "anthropic>=0.49",
    "youtube-transcript-api>=0.6",
]
postgres = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "alembic>=1.13",
]
all = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "alembic>=1.13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
neo = "neo.cli.main:cli"

[project.urls]
Homepage = "https://github.com/dallasrose/neo-agent-knowledge"
Repository = "https://github.com/dallasrose/neo-agent-knowledge"
Issues = "https://github.com/dallasrose/neo-agent-knowledge/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neo = ["static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
